# ukui-control-center

./: 0001-update-fix-bug.patch  0002-update.patch  AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  env.pri  org.ukui.control-center.gschema.xml.in  org.ukui.control-center.keybinding.gschema.xml.in  translate_generation.sh  ukui-control-center.convert  ukui-control-center.pro  ukui-control-center.pro.user.adb6991
capplets/about-me/: AUTHORS  Makefile.am  e-image-chooser.c  e-image-chooser.h  eel-alert-dialog.c  eel-alert-dialog.h  eel-gtk-macros.h  fingerprint-strings.h  ukui-about-me-fingerprint.c  ukui-about-me-fingerprint.h  ukui-about-me-password.c  ukui-about-me-password.h  ukui-about-me.c  ukui-about-me.desktop.in.in
capplets/appearance/: Makefile.am  appearance-desktop.c  appearance-desktop.h  appearance-font.c  appearance-font.h  appearance-main.c  appearance-style.c  appearance-style.h  appearance-support.c  appearance-support.h  appearance-themes.c  appearance-themes.h  appearance-ui.c  appearance-ui.h  appearance.h  theme-installer.c  theme-installer.h  theme-save.c  theme-save.h  theme-util.c  theme-util.h  ukui-wp-info.c  ukui-wp-info.h  ukui-wp-item.c  ukui-wp-item.h  ukui-wp-xml.c  ukui-wp-xml.h
capplets/common/: Makefile.am  activate-settings-daemon.c  capplet-stock-icons.c  capplet-stock-icons.h  capplet-util.c  capplet-util.h  dconf-util.c  dconf-util.h  file-transfer-dialog.c  file-transfer-dialog.h  gtkrc-utils.c  gtkrc-utils.h  theme-thumbnail.c  theme-thumbnail.h  ukui-theme-apply.c  ukui-theme-apply.h  ukui-theme-info.c  ukui-theme-info.h  ukui-theme-test.c  wm-common.c  wm-common.h
capplets/default-applications/: Makefile.am  ukui-da-capplet.c  ukui-da-capplet.h  ukui-default-applications-properties.desktop.in.in  ukui-default-applications.pc.in
capplets/display/: Makefile.am  TODO  display-capplet.ui  org.ukui.randr.policy.in  scrollarea.c  scrollarea.h  ukui-display-properties-install-systemwide.c  ukui-display-properties.desktop.in.in  xrandr-capplet.c
capplets/keybindings/: 00-multimedia-key.xml.in  01-desktop-key.xml.in  Makefile.am  eggaccelerators.c  eggaccelerators.h  eggcellrendererkeys.c  eggcellrendererkeys.h  ukui-keybinding-properties.c  ukui-keybinding-properties.ui  ukui-keybinding.desktop.in.in  ukui-keybindings.pc.in
capplets/keyboard/: Makefile.am  ukui-keyboard-properties-a11y.c  ukui-keyboard-properties-a11y.h  ukui-keyboard-properties-xkb.c  ukui-keyboard-properties-xkb.h  ukui-keyboard-properties-xkblt.c  ukui-keyboard-properties-xkbltadd.c  ukui-keyboard-properties-xkbmc.c  ukui-keyboard-properties-xkbot.c  ukui-keyboard-properties-xkbpv.c  ukui-keyboard-properties.c  ukui-keyboard.desktop.in.in
capplets/mouse/: Makefile.am  ukui-mouse-properties.c  ukui-settings-mouse.desktop.in.in
capplets/network/: Makefile.am  ukui-network-properties.c  ukui-network-properties.desktop.in.in
capplets/windows/: Makefile.am  ukui-metacity-support.c  ukui-metacity-support.h  ukui-window-properties.c  ukui-window-properties.desktop.in.in
data/: Makefile.am  installer-timezones.mo  org.ukui.control-center.apt.proxy.gschema.xml  org.ukui.control-center.desktop.gschema.xml  org.ukui.control-center.experienceplan.gschema.xml  org.ukui.control-center.gschema.xml  org.ukui.control-center.keyboard.gschema.xml  org.ukui.control-center.notice.gschema.xml  org.ukui.control-center.noticeorigin.gschema.xml  org.ukui.control-center.panel.plugins.gschema.xml  org.ukui.control-center.pen.gschema.xml  org.ukui.control-center.personalise.gschema.xml  org.ukui.control-center.pluginstatus.gschema.xml  org.ukui.control-center.vino.gschema.xml  org.ukui.control-center.wifi.switch.gschema.xml  org.ukui.panel.plugin.gschema.xml  ukuicc.rc  zone_utc
data/color/: Makefile.am
data/en_US/: index.md
data/savers-desktop/: ukui-abstractile.desktop  ukui-binaryring.desktop  ukui-cwaves.desktop  ukui-deco.desktop  ukui-distort.desktop  ukui-fiberlamp.desktop  ukui-fuzzyflakes.desktop  ukui-galaxy.desktop  ukui-hexadrop.desktop  ukui-m6502.desktop  ukui-metaballs.desktop  ukui-penrose.desktop  ukui-ripples.desktop  ukui-shadebobs.desktop  ukui-slidescreen.desktop  ukui-swirl.desktop  ukui-tessellimage.desktop  ukui-xlyap.desktop
data/zh_CN/: index.md
font-viewer/: Makefile.am  font-thumbnailer.c  font-view.c  ftstream-vfs.c  ftstream-vfs.h  totem-resources.c  totem-resources.h  ukui-font-viewer.desktop.in.in  ukui-font-viewer.thumbnailer
libwindow-settings/: Makefile.am  ukui-window-manager.c  ukui-window-manager.h  ukui-window-settings-2.0.pc.in  ukui-wm-manager.c  ukui-wm-manager.h  ukwm-window-manager.c  ukwm-window-manager.h
man/: Makefile.am  cc-qsysdbus-boot.1  changeotheruserpwd.1  changeuserpwd.1  checkuserpwd.1  childCheckpwdwithPAM.1  group-manager-server.1  launchSysDbus.1  ukui-about-me.1  ukui-appearance-properties.1  ukui-at-properties.1  ukui-control-center-session.1  ukui-control-center.1  ukui-default-applications-properties.1  ukui-display-properties-install-systemwide.1  ukui-display-properties.1  ukui-font-viewer.1  ukui-keybinding-properties.1  ukui-keyboard-properties.1  ukui-mouse-properties.1  ukui-network-properties.1  ukui-thumbnail-font.1  ukui-typing-monitor.1  ukui-window-properties.1
panels/appearance/: Makefile.am  appearance-desktop.c  appearance-desktop.h  appearance-desktopsettings.c  appearance-desktopsettings.h  (+25 more)
shell/: Makefile.am  border_shadow_effect.cpp  border_shadow_effect.h  control-center.c  customstyle.cpp  customstyle.h  delegate.cpp  delegate.h  devicesmonitor.h  homelayout.cpp  homelayout.h  homepagewidget.cpp  homepagewidget.h  homepagewidget.ui  iconbutton.cpp  iconbutton.h  interface.h  leftsidebarwidget.cpp  leftsidebarwidget.h  leftsiderbarwidget.cpp  leftsiderbarwidget.h  main.cpp  mainwindow.c  mainwindow.cpp  mainwindow.h  mainwindow.ui  mhomedelegate.cpp  mhomedelegate.h  modulepagewidget.cpp  modulepagewidget.h  modulepagewidget.ui  mstackwidget.cpp  mstackwidget.h  pinyin.cpp  pinyin.h  prescene.cpp  prescene.h  searchwidget.cpp  searchwidget.h  shell.pro  (+11 more)
(+1907 files in other folders)
