SUBDIRS = data panels shell po man

DIST_SUBDIRS = data panels shell po man


clean-local :
	rm -rf config.guess config.sub config.* aclocal.m4 libtool compile configure Makefile.in install-sh missing autom4te.cache config.h.in ltmain.sh depcomp m4 config.h.in~ INSTALL Makefile stamp-h1 po/Makefile.in.in po/Makefile po/Makefile.in po/POTFILES man/Makefile.in man/Makefile
