man_MANS = \
    ukui-about-me.1 \
    ukui-appearance-properties.1 \
    ukui-at-properties.1 \
    ukui-control-center.1 \
    ukui-default-applications-properties.1 \
    ukui-display-properties.1 \
    ukui-display-properties-install-systemwide.1 \
    ukui-font-viewer.1 \
    ukui-keybinding-properties.1 \
    ukui-keyboard-properties.1 \
    ukui-mouse-properties.1 \
    ukui-network-properties.1 \
    ukui-thumbnail-font.1 \
    ukui-typing-monitor.1 \
    ukui-window-properties.1

EXTRA_DIST = $(man_MANS)

-include $(top_srcdir)/git.mk
